# hal_relic

./: CMakeLists.txt
include/hal_relic/: plugin_hal_relic.h
python/: python_bindings.cpp
src/: plugin_hal_relic.cpp
